[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main Scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://main_theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.105882, 0.556863, 0.168627, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.87451, 0.0666667, 0.0666667, 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -783.0
margin_top = -539.0
margin_right = 1279.0
margin_bottom = 1057.0
color = Color( 0.156863, 0.0588235, 0.0588235, 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Start Game" type="Button" parent="Control"]
margin_left = -54.0
margin_top = -126.0
margin_right = 29.0
margin_bottom = -106.0
rect_scale = Vector2( 1.95801, 1.95862 )
theme = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "Start Game"
expand_icon = true

[node name="High Score" type="Button" parent="Control"]
margin_left = -24.0
margin_top = -38.0
margin_right = 75.0
margin_bottom = -13.0
text = "High Scores"

[node name="Quit" type="Button" parent="Control"]
margin_left = -14.0
margin_top = 18.0
margin_right = 63.0
margin_bottom = 38.0
custom_styles/normal = SubResource( 2 )
text = "Quit"
expand_icon = true

[connection signal="pressed" from="Control/Start Game" to="." method="_on_Start_Game_pressed"]
[connection signal="pressed" from="Control/High Score" to="." method="_on_High_Score_pressed"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_Quit_pressed"]
